--- a/index.html
+++ b/index.html
@@ -1,112 +1,162 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Anime Boy</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Poppins&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Easy Physics - GPT-4 Solver</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * {
-      margin: 0;
-      padding: 0;
       box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
     }
-
-    body, html {
-      height: 100%;
-      overflow: hidden;
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #1e3c72, #2a5298);
       color: white;
-      transition: background 0.5s ease, color 0.5s ease;
     }
-
-    #background-video {
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      min-width: 100%;
-      min-height: 100%;
-      z-index: -1;
-      object-fit: cover;
-    }
-
     .container {
-      height: 100%;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      padding: 40px 20px;
+      min-height: 100vh;
       text-align: center;
-      padding: 2rem;
-      background-color: rgba(0, 0, 0, 0.5);
     }
-
     h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 3rem;
-      margin-bottom: 1rem;
-      animation: fadeIn 2s ease-in;
+      font-size: 3.5rem;
+      margin-bottom: 0.2em;
+      animation: fadeIn 1s ease-in-out;
     }
-
     p {
       font-size: 1.2rem;
-      max-width: 800px;
-      line-height: 1.8;
-      animation: fadeIn 3s ease-in;
+      max-width: 700px;
+      animation: fadeIn 1.3s ease-in-out;
     }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .dark-mode {
-      background-color: #111;
-      color: #ddd;
-    }
-
-    .dark-mode-toggle {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      padding: 10px 15px;
-      background-color: #fff;
+    .btn {
+      margin-top: 2em;
+      padding: 15px 30px;
+      font-size: 1.1rem;
+      color: white;
+      background-color: #ff9800;
       border: none;
-      border-radius: 20px;
+      border-radius: 8px;
       cursor: pointer;
-      font-weight: bold;
-      z-index: 2;
+      transition: background 0.3s ease;
+      animation: fadeIn 1.5s ease-in-out;
+    }
+    .btn:hover {
+      background-color: #e68900;
+    }
+    .solver-section {
+      display: none;
+      margin-top: 40px;
+      width: 100%;
+      max-width: 800px;
+      background: white;
+      color: black;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+      animation: fadeIn 0.5s ease-in-out;
+    }
+    textarea {
+      width: 100%;
+      height: 100px;
+      margin-bottom: 10px;
+      padding: 10px;
+      font-size: 16px;
+      resize: vertical;
+    }
+    #output {
+      margin-top: 20px;
+      background: #f5f5f5;
+      padding: 15px;
+      border-radius: 5px;
+      text-align: left;
+      white-space: pre-wrap;
+    }
+    .physics-img {
+      width: 150px;
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      opacity: 0.3;
+      animation: float 4s ease-in-out infinite;
+    }
+    footer {
+      margin-top: 40px;
+      font-size: 0.9rem;
+      color: #ccc;
     }
 
-    .dark-mode .dark-mode-toggle {
-      background-color: #444;
-      color: #fff;
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(-10px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <button class="dark-mode-toggle" onclick="toggleDarkMode()">🌙 Toggle Dark Mode</button>
-  <video autoplay muted loop id="background-video">
-    <source src="https://cdn.pixabay.com/video/2023/04/25/162634-823493086_large.mp4" type="video/mp4">
-    Your browser does not support HTML5 video.
-  </video>
   <div class="container">
-    <h1>Straw Hat King</h1>
-    <p>
-      Sailing seas with dreams so high,<br>
-      A straw hat worn, he reaches the sky.<br>
-      Friends beside him, strong and true,<br>
-      Through every storm, they push through.<br><br>
-      With laughter loud and fists that fly,<br>
-      He never lets a dream just die.<br>
-      This is the tale, the pirate’s song,<br>
-      Of Luffy’s will, forever strong.
-    </p>
+    <h1>⚛️ Easy Physics</h1>
+    <p>AI-powered solutions for your toughest physics numericals. Step-by-step explanations made simple with GPT-4.</p>
+    <button class="btn" onclick="openSolver()">Start Solving</button>
+
+    <div class="solver-section" id="solver">
+      <h2>🔍 Physics Numerical Solver (GPT-4)</h2>
+      <textarea id="question" placeholder="e.g., A block of 2kg is pushed with 10N. Find acceleration."></textarea>
+      <button class="btn" onclick="solveQuestion()">Solve</button>
+      <div id="output">Solution will appear here...</div>
+    </div>
+
+    <footer>Made with ❤️ for students | EasyPhysics © 2025</footer>
   </div>
+
+  <img class="physics-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Atom_diagram.svg/800px-Atom_diagram.svg.png" alt="Physics">
+
   <script>
-    function toggleDarkMode() {
-      document.body.classList.toggle('dark-mode');
+    function openSolver() {
+      document.getElementById('solver').style.display = 'block';
+      document.querySelector('.btn').style.display = 'none';
+    }
+
+    async function solveQuestion() {
+      const question = document.getElementById('question').value;
+      const output = document.getElementById('output');
+
+      if (!question.trim()) {
+        output.innerHTML = "❗ Please enter a physics question.";
+        return;
+      }
+
+      output.innerHTML = "⏳ Thinking...";
+
+      try {
+        const response = await fetch("http://localhost:5000/solve", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({ question })
+        });
+
+        const data = await response.json();
+
+        if (data.solution) {
+          output.innerHTML = `<b>✅ Solution:</b><br>${data.solution}`;
+        } else if (data.error) {
+          output.innerHTML = `❌ Error: ${data.error}`;
+        } else {
+          output.innerHTML = "⚠️ Unexpected response.";
+        }
+
+      } catch (err) {
+        console.error(err);
+        output.innerHTML = "⚠️ Error: Could not connect to server.";
+      }
     }
   </script>
 </body>
