--- a/index.html
+++ b/index.html
@@ -1,163 +1,112 @@
-<!DOCTYPE html>
+
+    @<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Easy Physics - GPT-4 Solver</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Easy Physics | GPT-4 Solver</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
     body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #1e3c72, #2a5298);
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #1f3c88, #3f72af);
       color: white;
-    }
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px 20px;
-      min-height: 100vh;
       text-align: center;
+      padding: 20px;
     }
     h1 {
-      font-size: 3.5rem;
-      margin-bottom: 0.2em;
-      animation: fadeIn 1s ease-in-out;
+      font-size: 3rem;
     }
-    p {
-      font-size: 1.2rem;
-      max-width: 700px;
-      animation: fadeIn 1.3s ease-in-out;
-    }
-    .btn {
-      margin-top: 2em;
-      padding: 15px 30px;
-      font-size: 1.1rem;
-      color: white;
-      background-color: #ff9800;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-      animation: fadeIn 1.5s ease-in-out;
-    }
-    .btn:hover {
-      background-color: #e68900;
-    }
-    .solver-section {
-      display: none;
-      margin-top: 40px;
-      width: 100%;
-      max-width: 800px;
-      background: white;
+    .container {
+      background-color: white;
       color: black;
-      padding: 20px;
+      padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-      animation: fadeIn 0.5s ease-in-out;
+      max-width: 700px;
+      margin: 20px auto;
     }
     textarea {
       width: 100%;
-      height: 100px;
-      margin-bottom: 10px;
+      height: 150px;
       padding: 10px;
       font-size: 16px;
-      resize: vertical;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    button {
+      margin-top: 20px;
+      padding: 12px 25px;
+      background: #ff9800;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
     }
     #output {
-      margin-top: 20px;
-      background: #f5f5f5;
-      padding: 15px;
-      border-radius: 5px;
+      margin-top: 30px;
       text-align: left;
-      white-space: pre-wrap;
-    }
-    .physics-img {
-      width: 150px;
-      position: absolute;
-      top: 20px;
-      right: 30px;
-      opacity: 0.3;
-      animation: float 4s ease-in-out infinite;
+      background: #f3f3f3;
+      padding: 20px;
+      border-radius: 10px;
     }
     footer {
       margin-top: 40px;
-      font-size: 0.9rem;
-      color: #ccc;
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(-10px); }
-      100% { opacity: 1; transform: translateY(0); }
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
+
+  <h1>⚛️ Easy Physics</h1>
+  <p>AI-powered solver for tough physics numericals using GPT-4</p>
+
   <div class="container">
-    <h1>⚛️ Easy Physics</h1>
-    <p>AI-powered solutions for your toughest physics numericals. Step-by-step explanations made simple with GPT-4.</p>
-    <button class="btn" onclick="openSolver()">Start Solving</button>
+    <h2>🔍 Physics Numerical Solver (GPT-4)</h2>
+    <textarea id="question" placeholder="Enter your physics numerical here..."></textarea>
+    <br>
+    <button onclick="solveQuestion()">Solve</button>
 
-    <div class="solver-section" id="solver">
-      <h2>🔍 Physics Numerical Solver (GPT-4)</h2>
-      <textarea id="question" placeholder="e.g., A block of 2kg is pushed with 10N. Find acceleration."></textarea>
-      <button class="btn" onclick="solveQuestion()">Solve</button>
-      <div id="output">Solution will appear here...</div>
-    </div>
-
-    <footer>Made with ❤️ for students | EasyPhysics © 2025</footer>
+    <div id="output">Solution will appear here...</div>
   </div>
 
-  <img class="physics-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Atom_diagram.svg/800px-Atom_diagram.svg.png" alt="Physics">
+  <footer>
+    Made with ❤️ for students | EasyPhysics © 2025
+  </footer>
 
   <script>
-    function openSolver() {
-      document.getElementById('solver').style.display = 'block';
-      document.querySelector('.btn').style.display = 'none';
-    }
-
     async function solveQuestion() {
-      const question = document.getElementById('question').value;
-      const output = document.getElementById('output');
+      const question = document.getElementById("question").value;
+      const output = document.getElementById("output");
 
       if (!question.trim()) {
-        output.innerHTML = "❗ Please enter a physics question.";
+        output.innerHTML = "⚠️ Please enter a question.";
         return;
       }
 
-      output.innerHTML = "⏳ Thinking...";
+      output.innerHTML = "⏳ Solving with GPT-4...";
 
       try {
-        const response = await fetch("http://localhost:5000/solve", {
+        const response = await fetch("https://YOUR_BACKEND_URL/solve", {
           method: "POST",
           headers: {
             "Content-Type": "application/json"
           },
-          body: JSON.stringify({ question })
+          body: JSON.stringify({ question: question })
         });
 
         const data = await response.json();
 
         if (data.solution) {
-          output.innerHTML = `<b>✅ Solution:</b><br>${data.solution}`;
-        } else if (data.error) {
-          output.innerHTML = `❌ Error: ${data.error}`;
+          output.innerHTML = `<b>✅ Solution:</b><br><pre>${data.solution}</pre>`;
         } else {
-          output.innerHTML = "⚠️ Unexpected response.";
+          output.innerHTML = "⚠️ No solution returned.";
         }
-
-      } catch (err) {
-        console.error(err);
-        output.innerHTML = "⚠️ Error: Could not connect to server.";
+      } catch (error) {
+        console.error(error);
+        output.innerHTML = "⚠️ Error: Could not connect to backend server.";
       }
     }
   </script>
+
 </body>
 </html>
