--- a/index.html
+++ b/index.html
@@ -1,112 +1,165 @@
-
-    @<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Easy Physics | GPT-4 Solver</title>
+  <title>Pomodoro Clock</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #1f3c88, #3f72af);
+      background: #1a1a2e;
       color: white;
       text-align: center;
-      padding: 20px;
+      padding: 2rem;
+      transition: background 0.3s, color 0.3s;
     }
+
+    body.light {
+      background: #f5f5f5;
+      color: #111;
+    }
+
     h1 {
-      font-size: 3rem;
+      margin-bottom: 1rem;
     }
-    .container {
-      background-color: white;
-      color: black;
-      padding: 30px;
-      border-radius: 10px;
-      max-width: 700px;
-      margin: 20px auto;
+
+    #timer {
+      font-size: 5rem;
+      margin: 20px 0;
     }
-    textarea {
-      width: 100%;
-      height: 150px;
-      padding: 10px;
+
+    .controls button, .settings button {
+      margin: 10px;
+      padding: 10px 20px;
       font-size: 16px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-    button {
-      margin-top: 20px;
-      padding: 12px 25px;
-      background: #ff9800;
-      color: white;
+      background: #e94560;
       border: none;
-      border-radius: 6px;
-      font-size: 16px;
+      border-radius: 10px;
+      color: white;
       cursor: pointer;
     }
-    #output {
-      margin-top: 30px;
-      text-align: left;
-      background: #f3f3f3;
-      padding: 20px;
-      border-radius: 10px;
+
+    .controls button:hover, .settings button:hover {
+      background: #ff5f7e;
     }
-    footer {
-      margin-top: 40px;
-      font-size: 14px;
+
+    .settings input {
+      width: 50px;
+      padding: 5px;
+      margin: 0 5px;
+    }
+
+    .settings {
+      margin-bottom: 15px;
+    }
+
+    progress {
+      width: 100%;
+      height: 20px;
+      margin-top: 15px;
+    }
+
+    #session-count {
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
 
-  <h1>⚛️ Easy Physics</h1>
-  <p>AI-powered solver for tough physics numericals using GPT-4</p>
+  <h1>Pomodoro Clock</h1>
 
-  <div class="container">
-    <h2>🔍 Physics Numerical Solver (GPT-4)</h2>
-    <textarea id="question" placeholder="Enter your physics numerical here..."></textarea>
-    <br>
-    <button onclick="solveQuestion()">Solve</button>
-
-    <div id="output">Solution will appear here...</div>
+  <div class="settings">
+    Work: <input type="number" id="work-minutes" value="25" min="1" /> min
+    Break: <input type="number" id="break-minutes" value="5" min="1" /> min
+    <button onclick="applySettings()">Apply</button>
   </div>
 
-  <footer>
-    Made with ❤️ for students | EasyPhysics © 2025
-  </footer>
+  <div id="timer">25:00</div>
+  <progress id="progress" value="0" max="100"></progress>
+
+  <div class="controls">
+    <button onclick="startTimer()">Start</button>
+    <button onclick="pauseTimer()">Pause</button>
+    <button onclick="resetTimer()">Reset</button>
+    <button onclick="toggleTheme()">Toggle Theme</button>
+  </div>
+
+  <div id="mode">Work Session</div>
+  <div>Sessions Completed Today: <span id="session-count">0</span></div>
+
+  <audio id="ding" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg" preload="auto"></audio>
 
   <script>
-    async function solveQuestion() {
-      const question = document.getElementById("question").value;
-      const output = document.getElementById("output");
+    let workDuration = 25 * 60;
+    let breakDuration = 5 * 60;
+    let currentTime = workDuration;
+    let isRunning = false;
+    let isWorkTime = true;
+    let timerInterval;
+    let sessionCount = parseInt(localStorage.getItem("pomodoro_sessions")) || 0;
 
-      if (!question.trim()) {
-        output.innerHTML = "⚠️ Please enter a question.";
-        return;
-      }
+    const timerDisplay = document.getElementById("timer");
+    const modeDisplay = document.getElementById("mode");
+    const progressBar = document.getElementById("progress");
+    const sessionCounter = document.getElementById("session-count");
+    const ding = document.getElementById("ding");
 
-      output.innerHTML = "⏳ Solving with GPT-4...";
+    function updateDisplay() {
+      const minutes = String(Math.floor(currentTime / 60)).padStart(2, '0');
+      const seconds = String(currentTime % 60).padStart(2, '0');
+      timerDisplay.textContent = `${minutes}:${seconds}`;
+      const total = isWorkTime ? workDuration : breakDuration;
+      progressBar.value = ((total - currentTime) / total) * 100;
+    }
 
-      try {
-        const response = await fetch("https://YOUR_BACKEND_URL/solve", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ question: question })
-        });
+    function startTimer() {
+      if (!isRunning) {
+        timerInterval = setInterval(() => {
+          currentTime--;
+          updateDisplay();
 
-        const data = await response.json();
-
-        if (data.solution) {
-          output.innerHTML = `<b>✅ Solution:</b><br><pre>${data.solution}</pre>`;
-        } else {
-          output.innerHTML = "⚠️ No solution returned.";
-        }
-      } catch (error) {
-        console.error(error);
-        output.innerHTML = "⚠️ Error: Could not connect to backend server.";
+          if (currentTime <= 0) {
+            ding.play();
+            if (isWorkTime) {
+              sessionCount++;
+              localStorage.setItem("pomodoro_sessions", sessionCount);
+              sessionCounter.textContent = sessionCount;
+            }
+            isWorkTime = !isWorkTime;
+            currentTime = isWorkTime ? workDuration : breakDuration;
+            modeDisplay.textContent = isWorkTime ? "Work Session" : "Break Time";
+          }
+        }, 1000);
+        isRunning = true;
       }
     }
-  </script>
 
+    function pauseTimer() {
+      clearInterval(timerInterval);
+      isRunning = false;
+    }
+
+    function resetTimer() {
+      clearInterval(timerInterval);
+      isRunning = false;
+      isWorkTime = true;
+      currentTime = workDuration;
+      modeDisplay.textContent = "Work Session";
+      updateDisplay();
+    }
+
+    function applySettings() {
+      workDuration = parseInt(document.getElementById("work-minutes").value) * 60;
+      breakDuration = parseInt(document.getElementById("break-minutes").value) * 60;
+      resetTimer();
+    }
+
+    function toggleTheme() {
+      document.body.classList.toggle("light");
+    }
+
+    // Initial setup
+    sessionCounter.textContent = sessionCount;
+    updateDisplay();
+  </script>
 </body>
 </html>
